Добавлен функционал сборки и публикации в nexus
