# person-service/openapi/person-api.yaml
@@ -12,7 +12,7 @@ paths:
       summary: Регистрация пользователя
       operationId: "registration"
       tags:
-        - Person
+        - person-service
       requestBody:
         required: true
         content:
@@ -31,7 +31,7 @@ paths:
       summary: Получение списка пользователей
       operationId: "findAllByEmail"
       tags:
-        - Person
+        - person-service
       parameters:
         - in: query
           name: email
@@ -57,7 +57,7 @@ paths:
       summary: Получение пользователя по Id
       operationId: "findById"
       tags:
-        - Person
+        - person-service
       parameters:
         - in: path
           name: id
@@ -77,7 +77,7 @@ paths:
       summary: Изменение пользователя
       operationId: "update"
       tags:
-        - Person
+        - person-service
       parameters:
         - in: path
           name: id
@@ -103,7 +103,7 @@ paths:
       summary: Удаление пользователя (soft)
       operationId: "delete"
       tags:
-        - Person
+        - person-service
       parameters:
         - in: path
           name: id
@@ -120,7 +120,7 @@ paths:
       summary: Удаление пользователя (hard) (Компенсация регистрации пользователя SAGA)
       operationId: "compensateRegistration"
       tags:
-        - Person
+        - person-service
       parameters:
         - in: path
           name: id
@@ -146,14 +146,14 @@ components:
       type: object
       required: [
         email,
-        fistName,
+        firstName,
         lastName,
         passport_number,
         phone_number,
         address,
       ]
       properties:
-        fistName:
+        firstName:
           type: string
         lastName:
           type: string
